--- a/Abyari/Web.config
+++ b/Abyari/Web.config
@@ -24,6 +24,7 @@
         <add namespace="WebUtility.Controls" assembly="WebUtilityv2" tagPrefix="uc1" />
         <add tagPrefix="dynamic" assembly="WebUtilityv2" namespace="Telerik.Web.UI.DynamicData" />
         <add assembly="App_Web_logincontrol.ascx.cc671b29" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
+        <add assembly="App_Web_uscfileupload.ascx.cc671b29" namespace="WebUtility.Controls" tagPrefix="uc1" />
         <add assembly="App_Web_uscreportdesign.ascx.cc671b29" namespace="WebUtility.Controls" tagPrefix="uc1" />
         <add assembly="App_Web_uscreportshow.ascx.cc671b29" namespace="WebUtility.Controls" tagPrefix="uc1" />
         <add assembly="Telerik.Web.UI" namespace="Telerik.Web.UI" tagPrefix="telerik" />
