--- a/Abyari/Abyari.csproj
+++ b/Abyari/Abyari.csproj
@@ -58,6 +58,10 @@
     <Reference Include="App_Web_uscentitytypeshow.ascx.cc671b29">
       <HintPath>..\..\..\publish\WorkFlow\bin\App_Web_uscentitytypeshow.ascx.cc671b29.dll</HintPath>
     </Reference>
+    <Reference Include="App_Web_uscfileupload.ascx.cc671b29, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\App_Web_uscfileupload.ascx.cc671b29.dll</HintPath>
+    </Reference>
     <Reference Include="App_Web_uscimportfromexcel.ascx.cc671b29">
       <HintPath>..\..\..\publish\WebUtilityv2\bin\App_Web_uscimportfromexcel.ascx.cc671b29.dll</HintPath>
     </Reference>
@@ -168,7 +172,7 @@
     <Reference Include="Telerik.Windows.Zip, Version=2017.3.907.40, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Telerik.Windows.Zip.dll</HintPath>
-      </Reference>
+    </Reference>
     <Reference Include="Telerik.Web.Spreadsheet">
       <HintPath>..\lib\RCAJAX\2017.3.913.45\AdditionalLibraries\Bin45\Telerik.Web.Spreadsheet.dll</HintPath>
     </Reference>
@@ -350,6 +354,7 @@
     <Content Include="Design\Styles\style.css" />
     <Content Include="Design\Styles\thickbox.css" />
     <Content Include="Design\Styles\validationEngine.jquery.css" />
+    <Content Include="Design\Styles\wizard.css" />
     <Content Include="DynamicData\Content\GridViewPager.ascx" />
     <Content Include="DynamicData\Content\Images\Back.gif" />
     <Content Include="DynamicData\Content\Images\header_back.gif" />
@@ -410,7 +415,6 @@
     <Content Include="Financial\Management.aspx" />
     <Content Include="Global.asax" />
     <Content Include="LoginUser.aspx" />
-    <Content Include="Monaghese\CSS\wizard.css" />
     <Content Include="Monaghese\getData.aspx" />
     <Content Include="Reports\Report.aspx" />
     <Content Include="Reports\ReportDesigner.aspx" />
