--- a/Abyari/Web.config
+++ b/Abyari/Web.config
@@ -11,8 +11,8 @@
   <appSettings>
     <add key="Telerik.Web.CaptchaDenyAudioHandler" value="true" />
     <add key="SendSMS" value="yes" />
-  <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
-  <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
+    <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
+    <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
   </appSettings>
   <system.web>
     <authentication mode="Forms">
@@ -37,10 +37,11 @@
         <add assembly="App_Web_uscroleselect.ascx.cc671b29" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
         <add assembly="AccessManagementService" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
         <add assembly="JQControls" namespace="JQControls" tagPrefix="em" />
+        <add assembly="App_Web_uscimportfromexcel.ascx.cc671b29" namespace="WebUtility.Controls" tagPrefix="uc1" />
       </controls>
-    
+
     </pages>
-    
+
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -50,7 +51,7 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
-   
+
     <httpHandlers>
       <add path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" validate="false" />
       <add path="ChartImage.axd" type="Telerik.Web.UI.ChartHttpHandler" verb="*" validate="false" />
@@ -87,12 +88,13 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      
+
       <remove name="ChartImage_axd" />
       <remove name="Telerik_Web_UI_SpellCheckHandler_axd" />
       <remove name="Telerik_Web_UI_DialogHandler_aspx" />
       <remove name="Telerik_RadUploadProgressHandler_ashx" />
-      <remove name="Telerik_Web_UI_WebResource_axd" /><add name="Telerik_Web_UI_WebResource_axd" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" preCondition="integratedMode" />
+      <remove name="Telerik_Web_UI_WebResource_axd" />
+      <add name="Telerik_Web_UI_WebResource_axd" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" preCondition="integratedMode" />
       <add name="cusomhandler" path="*.rep" verb="*" type="WebUtility.Handlers.GetReport,WebUtilityv2" />
       <add name="ChartImage_axd" path="ChartImage.axd" type="Telerik.Web.UI.ChartHttpHandler" verb="*" preCondition="integratedMode" />
       <add name="Telerik_Web_UI_SpellCheckHandler_axd" path="Telerik.Web.UI.SpellCheckHandler.axd" type="Telerik.Web.UI.SpellCheckHandler" verb="*" preCondition="integratedMode" />
