--- a/Abyari/Web.config
+++ b/Abyari/Web.config
@@ -13,6 +13,8 @@
     <add key="SendSMS" value="yes" />
   <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
   <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
+  
+  
   </appSettings>
   <system.web>
     <authentication mode="Forms">
@@ -35,6 +37,7 @@
         <add assembly="App_Web_uscsignup.ascx.cc671b29" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
         <add assembly="App_Web_uscroleselect.ascx.cc671b29" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
         <add assembly="AccessManagementService" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
+        <add assembly="App_Web_uscfileupload.ascx.cc671b29" namespace="WebUtility.Controls" tagPrefix="uc1" />
         <add assembly="JQControls" namespace="JQControls" tagPrefix="em" />
       </controls>
     
@@ -76,11 +79,16 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AbyariEntities" connectionString="metadata=res://*/Model.AbyariModel.csdl|res://*/Model.AbyariModel.ssdl|res://*/Model.AbyariModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="AbyariEntities" connectionString="metadata=res://*/Model.AbyariModel.csdl|res://*/Model.AbyariModel.ssdl|res://*/Model.AbyariModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="AccessEntities" connectionString="metadata=res://AccessManagementService/Model.Model.csdl|res://AccessManagementService/Model.Model.ssdl|res://AccessManagementService/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="MPOInterfaceEntities" connectionString="metadata=res://MPOInterface/Model.Model1.csdl|res://MPOInterface/Model.Model1.ssdl|res://MPOInterface/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari_anjoman;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="WebUtilityEntities" connectionString="metadata=res://WebUtilityv2/Model.Model.csdl|res://WebUtilityv2/Model.Model.ssdl|res://WebUtilityv2/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="WorkFlowEntities" connectionString="metadata=res://WorkFlow/Model.WorkFlowModel.csdl|res://WorkFlow/Model.WorkFlowModel.ssdl|res://WorkFlow/Model.WorkFlowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WorkFlowEntities" connectionString="metadata=res://WorkFlow/Model.WorkFlowModel.csdl|res://WorkFlow/Model.WorkFlowModel.ssdl|res://WorkFlow/Model.WorkFlowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
+
+    <add name="AbyariEntities" connectionString="metadata=res://*/Model.AbyariModel.csdl|res://*/Model.AbyariModel.ssdl|res://*/Model.AbyariModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AccessEntities" connectionString="metadata=res://AccessManagementService/Model.Model.csdl|res://AccessManagementService/Model.Model.ssdl|res://AccessManagementService/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WebUtilityEntities" connectionString="metadata=res://WebUtilityv2/Model.Model.csdl|res://WebUtilityv2/Model.Model.ssdl|res://WebUtilityv2/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WorkFlowEntities" connectionString="metadata=res://WorkFlow/Model.WorkFlowModel.csdl|res://WorkFlow/Model.WorkFlowModel.ssdl|res://WorkFlow/Model.WorkFlowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
   <system.webServer>
