--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ Abyari/[Bb]in/
 Abyari/[Oo]bj/
 Abyari/[Ll]og/
 lib/
+Abyari/Properties/licenses.licx
 # Visual Studio 2015 cache/options directory
 Abyari/.vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
