--- a/Abyari/Web.config
+++ b/Abyari/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <appSettings>
     <add key="Telerik.Web.CaptchaDenyAudioHandler" value="true" />
-    <add key="SendSMS" value="yes" />
+    <add key="SendSMS" value="no" />
     <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
     <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
   </appSettings>
