--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ Abyari/[Oo]bj/
 Abyari/[Ll]og/
 lib/
 Abyari/Properties/licenses.licx
+Abyari/log.txt
+Abyari/uploads/
+*.orig*
 # Visual Studio 2015 cache/options directory
 Abyari/.vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
