--- a/Abyari/Web.config
+++ b/Abyari/Web.config
@@ -36,7 +36,7 @@
         <add assembly="App_Web_uscsignup.ascx.cc671b29" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
         <add assembly="App_Web_uscroleselect.ascx.cc671b29" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
         <add assembly="AccessManagementService" namespace="AccessManagementService.Controls" tagPrefix="uc1" />
-        <add assembly="JQControls" namespace="JQControls" tagPrefix="em" /?
+        <add assembly="JQControls" namespace="JQControls" tagPrefix="em" />
         <add assembly="App_Web_uscimportfromexcel.ascx.cc671b29" namespace="WebUtility.Controls" tagPrefix="uc1" />
       </controls>
 
@@ -78,16 +78,16 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="AbyariEntities" connectionString="metadata=res://*/Model.AbyariModel.csdl|res://*/Model.AbyariModel.ssdl|res://*/Model.AbyariModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="AccessEntities" connectionString="metadata=res://AccessManagementService/Model.Model.csdl|res://AccessManagementService/Model.Model.ssdl|res://AccessManagementService/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="WebUtilityEntities" connectionString="metadata=res://WebUtilityv2/Model.Model.csdl|res://WebUtilityv2/Model.Model.ssdl|res://WebUtilityv2/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="WorkFlowEntities" connectionString="metadata=res://WorkFlow/Model.WorkFlowModel.csdl|res://WorkFlow/Model.WorkFlowModel.ssdl|res://WorkFlow/Model.WorkFlowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="AbyariEntities" connectionString="metadata=res://*/Model.AbyariModel.csdl|res://*/Model.AbyariModel.ssdl|res://*/Model.AbyariModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AccessEntities" connectionString="metadata=res://AccessManagementService/Model.Model.csdl|res://AccessManagementService/Model.Model.ssdl|res://AccessManagementService/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WebUtilityEntities" connectionString="metadata=res://WebUtilityv2/Model.Model.csdl|res://WebUtilityv2/Model.Model.ssdl|res://WebUtilityv2/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WorkFlowEntities" connectionString="metadata=res://WorkFlow/Model.WorkFlowModel.csdl|res://WorkFlow/Model.WorkFlowModel.ssdl|res://WorkFlow/Model.WorkFlowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Abyari;user id=sa;password=1;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 
-    <add name="AbyariEntities" connectionString="metadata=res://*/Model.AbyariModel.csdl|res://*/Model.AbyariModel.ssdl|res://*/Model.AbyariModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="AbyariEntities" connectionString="metadata=res://*/Model.AbyariModel.csdl|res://*/Model.AbyariModel.ssdl|res://*/Model.AbyariModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="AccessEntities" connectionString="metadata=res://AccessManagementService/Model.Model.csdl|res://AccessManagementService/Model.Model.ssdl|res://AccessManagementService/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="WebUtilityEntities" connectionString="metadata=res://WebUtilityv2/Model.Model.csdl|res://WebUtilityv2/Model.Model.ssdl|res://WebUtilityv2/Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="WorkFlowEntities" connectionString="metadata=res://WorkFlow/Model.WorkFlowModel.csdl|res://WorkFlow/Model.WorkFlowModel.ssdl|res://WorkFlow/Model.WorkFlowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WorkFlowEntities" connectionString="metadata=res://WorkFlow/Model.WorkFlowModel.csdl|res://WorkFlow/Model.WorkFlowModel.ssdl|res://WorkFlow/Model.WorkFlowModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.abyari-isf.ir,1430;initial catalog=3920_abyari;user id=3920_abyari;password=Anj123$%^;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
   </connectionStrings>
   <system.webServer>
@@ -110,6 +110,10 @@
       <remove fileExtension=".json" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".mrt" mimeType="application/json" />
+      <remove fileExtension=".woff2" />
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2"/>
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff"/>
     </staticContent>
   </system.webServer>
 </configuration>
